# spinelab-claude

./: .gitignore  AGENTS.md  README.md  SpineLab.bat  environment.yml  pyproject.toml
docs/: agent_check_runbook.md  code_review.md  data_contracts.md  demo_adaptive_surgical_robotics.md  design_system.md  measurement_spec.md  project_brief.md  radical_paradigms.md  roadmap.md  spine-format.md  spinelab_manifesto.md  ui-baseline.md  user_guide.md  verse20_lambda_training.md
envs/: app.yml  cads_nnunet_win.yml  landmarkpt.yml  nanodrr.yml  nnunet_verse20.yml  nnunet_verse20_requirements.txt  nnunet_verse20_win.yml  polypose.yml  skellytour.yml  totalsegmentator_win.yml
tests/: conftest.py  test_anatomy_ontology.py  test_case_store.py  test_geometry.py  test_import_workspace.py  test_imported_ontology_package.py  test_main_window.py  test_measurement_export_bundle.py  test_measurement_overlays.py  test_measurement_workspace.py  test_measurements_stage.py  test_mesh_stage.py  test_nnunet_predict_sidecar.py  test_nnunet_verse20_post_fold_gate.py  test_performance.py  test_performance_widgets.py  test_pipeline_device.py  test_pipeline_orchestrator.py  test_prepare_verse20_nnunet.py  test_qss.py  test_registration_stage.py  test_render_backend.py  test_report_model.py  test_report_widgets.py  test_report_workspace.py  test_segmentation_backends_dialog.py  test_segmentation_bundles.py  test_segmentation_drivers.py  test_segmentation_runtime_inventory.py  test_segmentation_stage.py  test_settings_service.py  test_spine_package.py  test_testing_drr.py  test_viewer_2d.py  (+3 more)
(+179 files in other folders)
