[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spinelab"
version = "0.2.0"
description = "Native Windows review workbench for SpineLab 0.2"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "SpineLab" }]
dependencies = [
  "nibabel>=5.3",
  "networkx>=3.0",
  "numpy>=2.2",
  "pydicom>=3.0",
  "PySide6>=6.9",
  "pyvista>=0.47,<0.48",
  "pyvistaqt>=0.11,<0.12",
  "scipy>=1.15",
  "SimpleITK>=2.4",
  "trimesh>=4.0",
  "vtk>=9.6,<9.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-qt>=4.4",
  "ruff>=0.12",
  "mypy>=1.14",
]

[project.scripts]
spinelab = "spinelab.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spinelab"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
